Trying to fix image issue on mobile.

--- a/styles.css
+++ b/styles.css
@@ -29,7 +29,7 @@ body {
   height: 100vh;
   overflow: hidden;
   scroll-snap-align: start;
-  background: no-repeat center center fixed; 
+  background: no-repeat center center; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
